# fastapi-rest-postgres-boilerplate

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
scripts/: smoke.sh
src/app/: __init__.py  main.py
src/app/api/: deps.py
src/app/api/v1/: router.py
src/app/api/v1/endpoints/: auth.py  health.py  ping.py  users.py
src/app/core/: concurrency.py  config.py  exceptions.py  logging.py  security.py
src/app/db/: base.py  session.py
src/app/db/models/: __init__.py  user.py
src/app/middleware/: rate_limit.py  request_context.py  timeout.py
src/app/repositories/: user_repository.py
src/app/schemas/: auth.py  common.py  user.py
src/app/services/: auth_service.py  user_service.py
src/app/utils/: http_client.py
tests/: conftest.py
tests/integration/: test_auth_flow.py  test_health.py  test_ping.py
tests/unit/: test_concurrency.py  test_config.py  test_security.py
