[project]
name = "fastapi-async-boilerplate"
version = "0.1.0"
description = "Production-grade async FastAPI boilerplate with PostgreSQL"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["fastapi", "async", "postgres", "boilerplate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi[standard]>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "structlog>=24.4.0",
    "orjson>=3.10.12",
    "httpx>=0.28.1",
    "tenacity>=9.0.0",
    "redis>=5.2.1",
    # HttpClient enables HTTP/2 by default — pin h2 explicitly so the extra
    # never silently regresses out of the lockfile.
    "h2>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "anyio>=4.7.0",
    "asgi-lifespan>=2.1.0",
    "pre-commit>=4.0.1",
    "factory-boy>=3.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",   # pylint
    "RUF",  # ruff-specific
    "ASYNC",# flake8-async
    "ANN",  # flake8-annotations
    "PERF", # perflint
]
ignore = [
    "ANN401",  # allow Any in some places (kwargs)
    "PLR0913", # too many arguments
    "S101",    # asserts allowed in tests
    "PLR2004", # magic values
    "RUF012",  # mutable class attrs without ClassVar
    "B008",    # function call in default arg (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ANN", "PLR2004"]
"alembic/env.py" = ["ANN", "ERA"]
"scripts/**" = ["T20"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/.*"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/app",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["src/app"]
omit = ["*/__init__.py", "*/migrations/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Starter-level floor: most middleware error paths and the rate limiter
# require integration-test scenarios we haven't written yet. Raise this
# as the suite grows — target 80% once auth-edge and middleware-error
# cases are in.
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
